Update PhenopacketSampleConverter to accept local relative paths rather than strict URI